--- a/src/app/templates/home.html
+++ b/src/app/templates/home.html
@@ -7,7 +7,7 @@ I'm a researcher at <a
 	</p>
 
 <p>
-My main interest is the intersession between (human) language and computing, I focus on <a target="_blank" href="https://en.wikipedia.org/wiki/Machine_learning">Machine Learning</a> and  <a href="https://en.wikipedia.org/wiki/Natural_language_processing" target="_blank">Natural Language Processing</a>.
+My main interest is the intersection between (human) language and computing, I focus on <a target="_blank" href="https://en.wikipedia.org/wiki/Machine_learning">Machine Learning</a> and  <a href="https://en.wikipedia.org/wiki/Natural_language_processing" target="_blank">Natural Language Processing</a>.
 </p>
 
 <p>
@@ -25,6 +25,6 @@ Recently I have been working the following topics:
 
 <ul class="vcard"> 
 	<div>Telephone: <span class="tel">+52 55 5622-3573</span></div>
-	<div>eMail:
+	<div>e-mail:
 	<span class="email">ivanvladimir@turing.iimas.unam.mx</span></div>
 </ul>
