--- a/src/app/templates/index.html
+++ b/src/app/templates/index.html
@@ -1,8 +1,8 @@
 <div class="container">
       <nav class="navbar navbar-fixed-top navbar-dark bg-inverse">
-        <button class="navbar-toggler hidden-sm-up" type="button" data-toggle="collapse" data-target="#navbar-header" aria-controls="navbar-header" aria-expanded="false" aria-label="Toggle navigation"></button>
-        <div class="collapse navbar-toggleable-xs" id="navbar-header">
-  		 <a class="navbar-brand" [routerLink]="['/']">Ivan Vladimir</a>
+        <button class="navbar-toggle hidden-sm-up" type="button" (click)="isCollapsed = !isCollapsed" data-target="#navbar-header" aria-controls="navbar-header" aria-expanded="false" aria-label="Toggle navigation"></button>
+  		<a class="navbar-brand" [routerLink]="['/']">Ivan Vladimir</a>
+        <div class="collapse navbar-toggleable-xs" id="navbar-header" [collapse]="isCollapsed">
           <ul class="nav navbar-nav">
  	<li class="nav-item active"><a class="nav-link" [routerLink]="['/blog',1]">Blog</a></li>
 	<li class="nav-item active"><a class="nav-link" [routerLink]="['/publications']">Publications</a></li>
