--- a/src/app/templates/page.html
+++ b/src/app/templates/page.html
@@ -1,6 +1,10 @@
 <div class="row">
 <div class="col-lg-12">
-<h1> {{ header.title }}</h1>
+
+<h1> {{ header.title }} <a class="twitter-share-button" *ngIf="header.tweet"
+  href="https://twitter.com/intent/tweet?text={{header.tweet}} http://turing.iimas.unam.mx/~ivanvladimir/post/{{page.file}}">
+  <i class="fa fa-twitter fa-1x"></i></a>
+</h1>
 <hr style="height:1px;border:none;color:#333;background-color:#333;margin-bottom:15px;" />
 </div>
 </div>
