--- a/src/app/templates/post.html
+++ b/src/app/templates/post.html
@@ -1,7 +1,12 @@
 
 <div class="row">
 <div class="col-lg-12">
-<h1> {{ post.title }}</h1>
+<h1> {{ post.title }} <a class="twitter-share-button" *ngIf="post.tweet"
+  href="https://twitter.com/intent/tweet?text={{post.tweet}} http://turing.iimas.unam.mx/~ivanvladimir/post/{{post.file}}">
+  <i class="fa fa-twitter fa-1x"></i></a>
+</h1>
+
+
 <hr style="height:1px;border:none;color:#333;background-color:#333;margin-bottom:15px;" />
 </div>
 </div>
